objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Badge_Name__c</fullName>
        <label>Badge Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Range__c</fullName>
        <label>Maximum Range</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Range__c</fullName>
        <label>Minimum Range</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>